# parallel_pandas

./: Cargo.toml  pyproject.toml
src/: lib.rs
