[package]
name = "parallel_pandas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "parallel_pandas"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module", "auto-initialize"] }
rayon = "1.7.0"
crossbeam = "0.8.2"